--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+
+  <meta name="twitter:site"          content="@{{ site.twitter_username }}">
+  <meta name="twitter:title"         content="{{ page.title }}">
+  <meta name="twitter:description"   content="{{ page.description }}">
+
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
